--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="main-container">
         <nav>
             <ul>
-                <li><a href="index2.html"><h3>Начало</h3></a></li>
+                <li><a href="index.html"><h3>Начало</h3></a></li>
                 <li><a href="#"><h3>История</h3></a></li>
                 <li><a href="#"><h3>География</h3></a></li>
                 <li><a href="#"><h3>Любопитни факти</h3></a></li>
