--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 <p>  Мястото, на което е изграден Центърът – в подножието на планината, позволява на всеки, дори разполагащ с кратко време турист, да научи любопитни и важни неща за неповторимата дива природа, съхранявана на територията на Национален парк „Пирин“.</p>
             
                 <section class="iframe-container">
-                    <iframe width="100%" height="100%" src="http://12s.videoclip.bg/video/12/532580.mp4"  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe max-width="100%" max-height="100%" src="https://www.youtube.com/embed/kibcw0rCf2c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<!--                     <iframe width="100%" height="100%" src="http://12s.videoclip.bg/video/12/532580.mp4"  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                 </section>
 
             <h4>Адрес и работно време на посетителския информационен център</h4>
